Jupyter Notebook for DS Tools and Ecosystem

--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -30,6 +30,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "511cb7c4",
+   "metadata": {},
+   "source": [
+    "Some of the popular languages that Data Scientists use are:\n",
+    "1. Python\n",
+    "2. R\n",
+    "3. SQL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "579b1869",
    "metadata": {},
    "source": [
